# symsan

./: CMakeLists.txt  Dockerfile
backend/: CMakeLists.txt  fastgen.cpp
compiler/: ko_clang.c
driver/: fgtest.cpp
driver/aflpp/: symsan.cpp
driver/launcher/: launch.c
include/: launch.h  parse-z3.h
instrumentation/: CMakeLists.txt  TaintPass.cpp
parsers/: rgd-parser.cpp
python/: symsan-py.cpp
runtime/dfsan/: dfsan.cpp  dfsan.h  dfsan_custom.cpp  dfsan_flags.inc  done_abilist.txt
solvers/: CMakeLists.txt  fastgen.cpp  z3-ts.cpp  z3.cpp
tests/: boundary.c  boundary2.c  boundary3.c  boundary4.c  boundary5.c  boundary6.c  boundary7.c  bounds.cpp  lib.h  lit.cfg  optimistic.c  partial_concrete2.c  partial_concrete3.c  struct.c  ubsan_div.c  ubsan_intovfl.c  ubsan_shift.c  ubsan_trunc.c  xor_bool.c
